--- a/css/main.css
+++ b/css/main.css
@@ -8980,14 +8980,44 @@ h6 {
   font-size: 15px;
 }
 
-.contact-form {
+.contact-form-content {
   margin-bottom: 30px;
+  padding-top: 30px;
   padding-bottom: 5rem;
+}
+.contact-form-content .col-content-form {
+  -webkit-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.48);
+  -moz-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.48);
+  box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.48);
+}
+.contact-form-content .col-content-form .top-message {
+  margin-top: -40px;
+  background: #6b76ff;
+  -webkit-box-shadow: 0px 2px 29px -2px rgba(0, 0, 0, 0.44);
+  -moz-box-shadow: 0px 2px 29px -2px rgba(0, 0, 0, 0.44);
+  box-shadow: 0px 2px 29px -2px rgba(0, 0, 0, 0.44);
+  padding: 15px 20px;
+  color: #fff;
+  z-index: 2;
+  position: relative;
+}
+.contact-form-content .col-content-form .top-message h3 {
+  text-align: center;
+}
+.contact-form-content .col-content-form .top-message h3 i {
+  padding: 0px 7px 0px 0px;
+}
+.contact-form-content .col-content-form .contact-form {
+  margin-top: 30px;
+  margin-bottom: 30px;
 }
 
 #map {
   width: 100%;
-  height: 400px;
+  height: 530px;
+  -webkit-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.48);
+  -moz-box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.48);
+  box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.48);
 }
 
 .social {
