--- a/scss/theme/_contacto.scss
+++ b/scss/theme/_contacto.scss
@@ -30,11 +30,41 @@
         }
     }
 }
-.contact-form{
+.contact-form-content{
     margin-bottom: 30px;
+    padding-top: 30px;
     padding-bottom: 5rem;
+    .col-content-form{
+        -webkit-box-shadow: 0px 0px 9px -1px rgba(0,0,0,0.48);
+        -moz-box-shadow: 0px 0px 9px -1px rgba(0,0,0,0.48);
+        box-shadow: 0px 0px 9px -1px rgba(0,0,0,0.48);
+        .top-message{
+            margin-top: -40px;
+            background: #6b76ff;
+            -webkit-box-shadow: 0px 2px 29px -2px rgba(0,0,0,0.44);
+            -moz-box-shadow: 0px 2px 29px -2px rgba(0,0,0,0.44);
+            box-shadow: 0px 2px 29px -2px rgba(0,0,0,0.44);
+            padding: 15px 20px;
+            color: #fff;
+            z-index: 2;
+            position: relative;
+            h3{
+                i{
+                    padding: 0px 7px 0px 0px;
+                }
+                text-align: center;
+            }
+        }
+        .contact-form{
+            margin-top: 30px;
+            margin-bottom: 30px;
+        }
+    }
 }
 #map{
     width: 100%;
-    height: 400px;
+    height: 530px;
+    -webkit-box-shadow: 0px 0px 9px -1px rgba(0,0,0,0.48);
+    -moz-box-shadow: 0px 0px 9px -1px rgba(0,0,0,0.48);
+    box-shadow: 0px 0px 9px -1px rgba(0,0,0,0.48);
 }
