--- a/css/main.css
+++ b/css/main.css
@@ -8146,12 +8146,57 @@ p {
 
 html,
 body,
+.view {
+  height: 100%;
+}
+
+.carousel {
+  height: 100%;
+}
+.carousel .carousel-inner {
+  height: 100%;
+}
+.carousel .carousel-inner .carousel-item,
+.carousel .carousel-inner .active {
+  height: 100%;
+}
+
+.navbar {
+  background-color: rgba(0, 0, 0, 0.2);
+}
+
+.top-nav-collapse {
+  background-color: rgba(17, 17, 17, 0.938);
+}
+
+@media only screen and (max-width: 768px) {
+  .navbar {
+    background-color: #1C2331;
+  }
+}
+.page-footer {
+  background-color: #1C2331;
+}
+
+.container .navbar-brand {
+  display: none;
+}
+.container .navbar-brand img {
+  width: 50px;
+}
+@media (max-width: 991px) {
+  .container .navbar-brand {
+    display: block;
+  }
+}
+
+html,
+body,
 header,
 .view {
   height: 100%;
 }
 
-/* Carousel*/
 .carousel,
 .carousel-item,
 .carousel-item.active {
@@ -8172,19 +8217,26 @@ header,
 }
 
 .collapse .logo {
-  margin: 0 20px;
-  width: 100px;
+  margin: 2px 20px;
+}
+.collapse .logo img {
+  width: 90px;
+}
+@media (max-width: 991px) {
+  .collapse .logo {
+    display: none;
+  }
 }
 
 h6 {
   line-height: 1.7;
 }
 
-.nav-item a {
+.nav-item .nav-link {
   font-size: 14px;
   text-transform: uppercase;
 }
-.nav-item a:hover {
+.nav-item .nav-link:hover {
   color: #f8b600 !important;
 }
 
@@ -8368,7 +8420,7 @@ h6 {
   padding-bottom: 30px;
   text-align: center;
 }
-.title-packetes h1 {
+.title-packetes h2 {
   font-size: 35px;
   font-weight: bold;
 }
@@ -8580,13 +8632,6 @@ h6 {
 .gallery_instagram {
   padding-top: 4rem;
   padding-bottom: 4rem;
-}
-
-.nav-bar .nav-item a:hover {
-  color: #f8b600 !important;
-}
-.nav-bar .nav-item a:active {
-  background: none !important;
 }
 
 .site-cover {
@@ -8876,7 +8921,8 @@ h6 {
 }
 
 .social-content {
-  padding-top: 20px;
+  margin-top: 20px;
+  padding-top: 10px;
 }
 .social-content .title h4 {
   font-size: 25px;
@@ -8925,6 +8971,7 @@ h6 {
   margin: 15px 0;
 }
 .info-content .btn-popup {
+  margin: 20px 0px;
   display: inline-block;
   font-weight: 400;
   padding: 10px 25px;
@@ -8958,6 +9005,7 @@ h6 {
   margin-right: 20px;
 }
 .gallery-content .single-gallery-image {
+  width: 100%;
   margin-left: 0px;
   margin-right: -15px;
   margin-top: 10px;
@@ -8983,6 +9031,7 @@ h6 {
   padding-bottom: 4rem;
 }
 .content-mision .contenedor {
+  margin-top: 20px;
   border-top: 4px solid #6b76ff;
   border-radius: 4px;
   padding: 15px 30px;
@@ -9398,81 +9447,18 @@ h6 {
   box-shadow: 0px 0px 9px -1px rgba(0, 0, 0, 0.48);
 }
 
-.social {
-  position: relative;
-}
-.social .parallax-img {
+.bg-footer {
+  padding-top: 40px;
+  padding-bottom: 40px;
   background-size: cover;
   background-repeat: no-repeat;
+  background-position: top;
   background-position: center center;
-  position: relative;
-  padding: 20px;
-  background-image: linear-gradient(111.5deg, #1464c4 0.4%, #2198d6 100.2%);
-}
-.social .section_title {
-  font-size: 25px;
-}
-.social li {
-  list-style: none;
-  margin: 0 10px 0 0;
-  display: inline-block;
-}
-.social li a {
-  height: 50px;
-  width: 50px;
-  display: block;
-  float: left;
-  color: #fff;
-  background: none;
-  border: 1px solid #fff;
-  border-radius: 50%;
-  position: relative;
-}
-.social li a span {
-  position: absolute;
-  font-size: 26px;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-}
-.social .icon-1:hover, .social .icon-1:focus {
-  border: 1px solid #0084b4;
-}
-.social .icon-1:hover .icon-twitter, .social .icon-1:focus .icon-twitter {
-  color: #0084b4;
-}
-.social .icon-2:hover, .social .icon-2:focus {
-  border: 1px solid #3a5795;
-}
-.social .icon-2:hover .icon-facebook, .social .icon-2:focus .icon-facebook {
-  color: #3a5795;
-}
-.social .icon-3:hover, .social .icon-3:focus {
-  border: 1px solid #8a3ab9;
-}
-.social .icon-3:hover .icon-instagram, .social .icon-3:focus .icon-instagram {
-  color: #8a3ab9;
-}
-.social .icon-4:hover, .social .icon-4:focus {
-  border: 1px solid #CC181E;
-}
-.social .icon-4:hover .icon-youtube, .social .icon-4:focus .icon-youtube {
-  color: #CC181E;
 }
 
-footer {
-  padding-top: 40px;
-  padding-bottom: 50px;
-  background: black;
+.footer_contact {
+  margin-top: 20px;
 }
-@media (max-width: 767px) {
-  footer .row_contact {
-    display: flex !important;
-    flex-wrap: wrap;
-    justify-content: space-around;
-  }
-}
-
 .footer_contact .footer_contact_icon {
   width: 100%;
 }
@@ -9506,115 +9492,6 @@ footer {
 .footer_contact .footer_contact_btn .primary-btn:hover {
   background: #fff;
   color: #000;
-}
-
-.footer .row_contact {
-  margin-top: 70px;
-}
-.footer .row_contact .footer_logo {
-  width: 100%;
-}
-.footer .row_contact .footer_logo img {
-  width: 70px;
-}
-.footer .row_contact .social_footer .social_list {
-  margin: 0;
-  padding: 0;
-}
-.footer .row_contact .social_footer .social_list li {
-  list-style: none;
-  text-decoration: none;
-  display: inline-block;
-  margin: 0 6px;
-}
-.footer .row_contact .social_footer .social_list li a {
-  color: #fff;
-  font-size: 30px;
-}
-.footer .row_contact .social_contact .number {
-  font-size: 25px;
-}
-.footer .footer_info {
-  margin-top: 30px;
-  padding-top: 70px;
-}
-.footer .footer_info .footer_dest .title_dest {
-  color: #fff;
-  font-size: 25px;
-}
-.footer .footer_info .footer_dest .dest_logo {
-  width: 100%;
-}
-.footer .footer_info .footer_dest .dest_logo img {
-  width: 80px;
-}
-.footer .footer_info .questions_footer {
-  color: #fff;
-}
-.footer .footer_info .questions_footer h3 {
-  font-size: 25px;
-  color: #fff;
-  margin: 15px 0;
-}
-.footer .footer_info .questions_footer ul {
-  padding: 0;
-}
-.footer .footer_info .questions_footer ul li {
-  list-style: none;
-  padding: 5px 0;
-}
-.footer .footer_info .questions_footer ul span {
-  color: rgba(255, 255, 255, 0.7);
-}
-.footer .footer_info .questions_footer ul .icon, .footer .footer_info .questions_footer ul .text {
-  display: table-cell;
-  vertical-align: top;
-}
-.footer .footer_info .questions_footer ul .text {
-  font-size: 17px;
-}
-.footer .footer_info .questions_footer ul .icon {
-  width: 40px;
-  font-size: 18px;
-  padding-top: 2px;
-  color: white;
-}
-
-html,
-body,
-.view {
-  height: 100%;
-}
-
-.carousel {
-  height: 100%;
-}
-.carousel .carousel-inner {
-  height: 100%;
-}
-.carousel .carousel-inner .carousel-item,
-.carousel .carousel-inner .active {
-  height: 100%;
-}
-
-/* Navbar animation */
-.navbar {
-  background-color: rgba(0, 0, 0, 0.2);
-}
-
-.top-nav-collapse {
-  background-color: rgba(17, 17, 17, 0.8);
-}
-
-/* Adding color to the Navbar on mobile */
-@media only screen and (max-width: 768px) {
-  .navbar {
-    background-color: #1C2331;
-  }
-}
-/* Footer color for sake of consistency with Navbar */
-.page-footer {
-  background-color: #1C2331;
 }
 
 /*# sourceMappingURL=main.css.map */
