--- a/scss/theme/_about.scss
+++ b/scss/theme/_about.scss
@@ -2,6 +2,7 @@
     padding-top: 4rem;
     padding-bottom: 4rem;
     .contenedor{
+        margin-top: 20px;
         border-top: 4px solid $color-con;
         border-radius: 4px;
         padding: 15px 30px;
