--- a/scss/theme/_mini-destinos.scss
+++ b/scss/theme/_mini-destinos.scss
@@ -1,5 +1,6 @@
 .social-content{
-    padding-top: 20px;
+    margin-top: 20px;
+    padding-top: 10px;
    .title{
        h4{
            font-size: 25px;
@@ -49,6 +50,7 @@
         margin: 15px 0;
     }
     .btn-popup{
+        margin: 20px 0px;
         display: inline-block;
         font-weight: 400;
         padding: 10px 25px;
@@ -81,6 +83,7 @@
         margin-right: 20px;
     }
     .single-gallery-image {
+        width: 100%;
         margin-left: 0px;
         margin-right: -15px;
         margin-top: 10px;
