--- a/scss/theme/_blog.scss
+++ b/scss/theme/_blog.scss
@@ -1,5 +1,6 @@
 .content_blog{
-    padding-top: 5rem;
+    position: relative;
+    margin-top: -180px;
     padding-bottom: 5rem;
     .col-md-4{
         margin-bottom: 15px;
