--- a/scss/theme/_destinos.scss
+++ b/scss/theme/_destinos.scss
@@ -15,14 +15,14 @@
 			top: 0;
 		}
 	}
-	// .player{
-	// 	position: absolute;
-	// 	bottom: -250px;
-	// 	width: 100%;
-	// }
+	.player{
+		position: absolute;
+		bottom: -250px;
+		width: 100%;
+	}
 	&, .row{
-		min-height: 600px;
-		height: 100%;
+		min-height: 400px;
+		height: calc(50vh - 75px);
 	}
 	h1{
 		font-weight: 700;
@@ -34,72 +34,6 @@
 	a, span{
 		font-size: 20px;
 	} 
-	button.scroll_down {
-		position: absolute;
-		margin-left: auto;
-		margin-right: auto;
-		left: 0;
-		right: 0;
-		height: 50px;
-		width: 30px;
-		bottom: 10px;
-		background-color: transparent;
-		border: 2px solid white;
-		border-radius: 20px;
-		cursor: pointer;
-		outline: none;
-	  }
-	  button.scroll_down:before {
-		position: absolute;
-		top: 10px;
-		left: 50%;
-		content: '';
-		width: 6px;
-		height: 6px;
-		margin-left: -3px;
-		background-color: #fff;
-		border-radius: 100%;
-		-webkit-animation: scroll_down_btn-animation 2s infinite;
-		animation: scroll_down_btn-animation 2s infinite;
-		box-sizing: border-box;
-	  }
-	  
-	  @keyframes scroll_down_btn-animation {
-		0% {
-		  transform: translate(0, 0);
-		  opacity: 0;
-		}
-		40% {
-		  opacity: 1;
-		}
-		80% {
-		  transform: translate(0, 20px);
-		  opacity: 0;
-		}
-		100% {
-		  opacity: 0;
-		}
-	  }
-	  
-	  @-webkit-keyframes scroll_down_btn-animation {
-		0% {
-		  -webkit-transform: translate(0, 0);
-		  transform: translate(0, 0);
-		  opacity: 0;
-		}
-		40% {
-		  opacity: 1;
-		}
-		80% {
-		  -webkit-transform: translate(0, 20px);
-		  transform: translate(0, 20px);
-		  opacity: 0;
-		}
-		100% {
-		  opacity: 0;
-		}
-	  }
-	
 }
 .overlap-section{
 	.container{
