--- a/scss/theme/_home.scss
+++ b/scss/theme/_home.scss
@@ -372,7 +372,8 @@
     }
 }
 .gallery_instagram{
-    padding-top: 4rem;
+    position: relative;
+    margin-top: -140px;
     padding-bottom: 4rem;
     
 }
