--- a/scss/theme/_about.scss
+++ b/scss/theme/_about.scss
@@ -1,5 +1,6 @@
 .content-mision{
-    padding-top: 4rem;
+    position: relative;
+    margin-top: -150px;
     padding-bottom: 4rem;
     .contenedor{
         margin-top: 20px;
