--- a/scss/theme/_contacto.scss
+++ b/scss/theme/_contacto.scss
@@ -1,6 +1,6 @@
 .contact-section{
-    margin: 30px 0 30px 0;
-    padding-top: 5rem;
+    position: relative;
+    margin-top: -170px;
     .contact-info{
         p{
             font-size: 14px;
