--- a/scss/theme/_about.scss
+++ b/scss/theme/_about.scss
@@ -1,10 +1,10 @@
 .content-mision{
-    position: relative;
-    margin-top: -150px;
+    margin-top: 25px;
+    padding-top: 15px;
     padding-bottom: 4rem;
     .contenedor{
         margin-top: 20px;
-        border-top: 4px solid $color-con;
+        border-top: 4px solid $secondaryColor2;
         border-radius: 4px;
         padding: 15px 30px;
         -webkit-box-shadow: 2px 2px 21px -1px rgba(0,0,0,0.28);
