--- a/scss/theme/_blog.scss
+++ b/scss/theme/_blog.scss
@@ -1,6 +1,6 @@
 .content_blog{
-    position: relative;
-    margin-top: -180px;
+    margin-top: 20px;
+    padding-top: 3rem;
     padding-bottom: 5rem;
     .col-md-4{
         margin-bottom: 15px;
