--- a/scss/theme/_contacto.scss
+++ b/scss/theme/_contacto.scss
@@ -1,6 +1,7 @@
 .contact-section{
-    position: relative;
-    margin-top: -170px;
+    margin-top: 20px;
+    padding-top: 2rem;
+    padding-bottom: 3rem;
     .contact-info{
         p{
             font-size: 14px;
