--- a/scss/theme/_experiencias.scss
+++ b/scss/theme/_experiencias.scss
@@ -1,7 +1,7 @@
 .post-content-area{
-    padding-top: 2rem;
+    position: relative;
     padding-bottom: 5rem;
-    margin-top: 2rem;
+    margin-top: -180px;
     @media (max-width: 1024px) {
         margin-top: 25px;
     }
