--- a/scss/theme/_home.scss
+++ b/scss/theme/_home.scss
@@ -372,8 +372,8 @@
     }
 }
 .gallery_instagram{
-    position: relative;
-    margin-top: -140px;
+    margin-top: 20px;
+    padding-top: 3rem;
     padding-bottom: 4rem;
     
 }
