--- a/scss/theme/_blog.scss
+++ b/scss/theme/_blog.scss
@@ -57,11 +57,11 @@
         }
     }
     .img-thumb{
-        // width: 100%;
+        width: 100%;
         // position: relative;
 		// width: 100%;
 		// display: block;
-		overflow: hidden;
+        overflow: hidden;
 		// z-index: 0;
         img{
             width: 100%;
