--- a/scss/theme/_experiencias.scss
+++ b/scss/theme/_experiencias.scss
@@ -1,10 +1,7 @@
 .post-content-area{
-    position: relative;
+    padding-top: 1.5rem;
     padding-bottom: 5rem;
-    margin-top: -180px;
-    @media (max-width: 1024px) {
-        margin-top: 25px;
-    }
+    margin-top: 20px;
     @media (max-width: 990px) {
         margin-top: 25px;
     }
