--- a/scss/theme/_home.scss
+++ b/scss/theme/_home.scss
@@ -78,6 +78,7 @@
             padding-right: 30px;
             h2{
                 margin-bottom: 20px;
+                font-size: 35px;
             }
             @media (max-width: 991px) {
                 text-align: center;
@@ -196,17 +197,10 @@
                 height: 100%;
             }
         }
-        .text-thumb{
-            padding: 15px;
-            text-align: center;
-            h6{
-                font-size: 19px;
-                color: $secondaryColor2;
-            }
-        }
         h4{
             margin-top: -15px;
             margin-bottom: 18px;
+            font-size: 25px;
             color: $secondaryColor2;
         }
         .primary-btn{
@@ -215,6 +209,21 @@
            box-shadow: 0 5px 18px rgba(179, 166, 166, 0.3);
            background: $secondaryColor2;
            color: #fff;
+           border: 1px solid $secondaryColor2;
+           text-transform: capitalize;
+           &:hover{
+               background: transparent;
+               color: #000;
+           }
+        }
+    }
+    .text-experience{
+        h6{
+            padding: 15px;
+            margin: 13px 0px;
+            text-align: center;
+            color: $secondaryColor2;
+            font-size: 19px;
         }
     }
 }
